--- a/slides/lecture4-classification.ipynb
+++ b/slides/lecture4-classification.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "# Announcements\n",
     "\n",
-    "* Homework "
+    "* Homework 1 coming soon\n",
+    "* Start forming teams and find your teammates\n"
    ]
   },
   {
