Bias-variance source added.

--- a/slides/lecture5-foundations-supervised-learning.ipynb
+++ b/slides/lecture5-foundations-supervised-learning.ipynb
@@ -1145,7 +1145,9 @@
     }
    },
    "source": [
-    "$$ \\underbrace{\\mathbb{E}_{x,y,D} \\left[ (f_D(x) - y)^2 \\right]}_\\text{Expected Test Error} = \\underbrace{\\mathbb{E}_{x,D} \\left[ (f_D(x) - \\bar{f}(x))^2 \\right]}_\\text{Variance} + \\underbrace{\\mathbb{E}_{x} \\left[ (\\bar{f}(x) - \\bar{y}(x))^2 \\right]}_\\text{Bias^2} + \\underbrace{\\mathbb{E}_{x,y} \\left[ (\\bar{y}(x) - y)^2 \\right]}_\\text{Noise}$$"
+    "$$ \\underbrace{\\mathbb{E}_{x,y,D} \\left[ (f_D(x) - y)^2 \\right]}_\\text{Expected Test Error} = \\underbrace{\\mathbb{E}_{x,D} \\left[ (f_D(x) - \\bar{f}(x))^2 \\right]}_\\text{Variance} + \\underbrace{\\mathbb{E}_{x} \\left[ (\\bar{f}(x) - \\bar{y}(x))^2 \\right]}_\\text{Bias^2} + \\underbrace{\\mathbb{E}_{x,y} \\left[ (\\bar{y}(x) - y)^2 \\right]}_\\text{Noise}$$\n",
+    "\n",
+    "Interested to learn how derived this? https://www.cs.cornell.edu/courses/cs4780/2018fa/lectures/lecturenote12.html"
    ]
   },
   {
@@ -1223,7 +1225,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
