Why ML supervised learning possible slides moved to Appendix.

--- a/slides/lecture5-foundations-supervised-learning.ipynb
+++ b/slides/lecture5-foundations-supervised-learning.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "The key assumption in that the training examples are *independent and identicaly distributed* (IID). \n",
     "* Each training example is from the same distribution.\n",
-    "* This distribution doesn't depend on previous training examples."
+    "* Each data instance doesn't depend on previous training examples."
    ]
   },
   {
@@ -154,7 +154,7 @@
    "execution_count": 1,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -259,7 +259,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -543,195 +547,6 @@
     "plt.scatter(X, y, edgecolor='b', s=20, label=\"Samples\")\n",
     "plt.scatter(X_holdout, y_holdout, edgecolor='r', s=20, label=\"Holdout Samples\")\n",
     "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Defining What is an Accurate Prediction\n",
-    "\n",
-    "Suppose that we have a function $\\texttt{isaccurate}(y, y')$ that determines if $y$ is an accurate estimate of $y'$, e.g.:\n",
-    "* Is the the target variable close enough to the true target?\n",
-    "$$\\texttt{isaccurate}(y, y') = \\text{true if } (|y - y'| \\text{ is small), else false}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Did we predict the right class?\n",
-    "$$\\texttt{isaccurate}(y, y') = \\text{true if } (y = y') \\text{ else false} $$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "This defines accuracy on a data point. We say a supervised learning model is accurate if it correctly predicts the target on *new (held-out) data*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Defining What is an Accurate Model\n",
-    "\n",
-    "We can say that a predictive model $f$ is accurate if it's probability of making an error on a random holdout sample is small:\n",
-    "\n",
-    "$$ 1 - \\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq \\epsilon $$\n",
-    "\n",
-    "for $\\dot{x}, \\dot{y} \\sim \\mathbb{P}$, for some small $\\epsilon > 0$ and some definition of accuracy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "We can also say that a predictive model $f$ is inaccurate if it's probability of making an error on a random holdout sample is large:\n",
-    "\n",
-    "$$ 1 - \\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\geq \\epsilon $$\n",
-    "\n",
-    "or equivalently\n",
-    "\n",
-    "$$\\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq  1-\\epsilon.$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Generalization\n",
-    "\n",
-    "In machine learning, __generalization__ is the property of predictive models to achieve good performance on new, heldout data that is distinct from the training set.\n",
-    "\n",
-    "Will supervised learning return a model that generalizes?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "# Recall: Supervised Learning\n",
-    "\n",
-    "Recall our intuitive definition of supervised learning.\n",
-    "\n",
-    "<center><img width=70% src=\"img/tesla_data.png\"/></center>\n",
-    "\n",
-    "1. First, we collect a dataset of labeled training examples.\n",
-    "2. We train a model to output accurate predictions on this dataset.\n",
-    "3. When the model sees new, similar data, it will also be accurate."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Recall: Supervised Learning\n",
-    "\n",
-    "Recall that supervised learning at a high level performs the following procedure:\n",
-    "1. Collect a training dataset $\\mathcal{D}$ of labeled examples.\n",
-    "2. Output a model that is accurate on $\\mathcal{D}$.\n",
-    "\n",
-    "I claim that the output model is also guaranteed to generalize if $\\mathcal{D}$ is large enough."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Applying Supervised Learning\n",
-    "\n",
-    "In order to prove that supervised learning works, we will make two simplifying assumptions:\n",
-    "1. We define a model class $\\mathcal{M}$ containing $H$ different models.\n",
-    "2. One of these models fits the training data perfectly (is accurate on every point) and we choose that model.\n",
-    "\n",
-    "(Both of these assumptions can be relaxed.)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Why Supervised Learning Works\n",
-    "\n",
-    "__Claim__: The probability that supervised learning will return an inaccurate model decreases exponentially with training set size $n$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "1. A model $f$ is inaccurate if $\\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq  1-\\epsilon$.  The probability that an inaccurate model $f$ perfectly fits the training set is at most $\\prod_{i=1}^n  \\mathbb{P} \\left[ \\texttt{isaccurate}(y^{(i)}, f(x^{(i)})) \\right] \\leq (1-\\epsilon)^n$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "2. We have $H$ models in $\\mathcal{M}$, and any of them could be in accurate. The probability that at least one the at most $H$ inaccurate models willl fit the training set perfectly is $\\leq H (1-\\epsilon)^n$.\n",
-    "<!-- 3. If $\\delta$ is the probability that a bad classifier is found by supervised learning, then $\\delta \\leq H (1-\\epsilon)^n$ and if\n",
-    "$$ n \\geq \\frac{\\log(\\delta/H)}{\\log(1-\\epsilon)} $$\n",
-    "then supervised learning will work with probability at least $1-\\delta$. -->"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Therefore, the claim holds."
    ]
   },
   {
@@ -2246,11 +2061,151 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# Defining What is an Accurate Prediction\n",
+    "\n",
+    "Suppose that we have a function $\\texttt{isaccurate}(y, y')$ that determines if $y$ is an accurate estimate of $y'$, e.g.:\n",
+    "* Is the the target variable close enough to the true target?\n",
+    "$$\\texttt{isaccurate}(y, y') = \\text{true if } (|y - y'| \\text{ is small), else false}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "* Did we predict the right class?\n",
+    "$$\\texttt{isaccurate}(y, y') = \\text{true if } (y = y') \\text{ else false} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "This defines accuracy on a data point. We say a supervised learning model is accurate if it correctly predicts the target on *new (held-out) data*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# Defining What is an Accurate Model\n",
+    "\n",
+    "We can say that a predictive model $f$ is accurate if it's probability of making an error on a random holdout sample is small:\n",
+    "\n",
+    "$$ 1 - \\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq \\epsilon $$\n",
+    "\n",
+    "for $\\dot{x}, \\dot{y} \\sim \\mathbb{P}$, for some small $\\epsilon > 0$ and some definition of accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "We can also say that a predictive model $f$ is inaccurate if it's probability of making an error on a random holdout sample is large:\n",
+    "\n",
+    "$$ 1 - \\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\geq \\epsilon $$\n",
+    "\n",
+    "or equivalently\n",
+    "\n",
+    "$$\\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq  1-\\epsilon.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# Generalization\n",
+    "\n",
+    "In machine learning, __generalization__ is the property of predictive models to achieve good performance on new, heldout data that is distinct from the training set.\n",
+    "\n",
+    "Will supervised learning return a model that generalizes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# Why Supervised Learning Works\n",
+    "\n",
+    "__Claim__: The probability that supervised learning will return an inaccurate model decreases exponentially with training set size $n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "1. A model $f$ is inaccurate if $\\mathbb{P} \\left[ \\texttt{isaccurate}(\\dot y, f(\\dot x)) \\right] \\leq  1-\\epsilon$.  The probability that an inaccurate model $f$ perfectly fits the training set is at most $\\prod_{i=1}^n  \\mathbb{P} \\left[ \\texttt{isaccurate}(y^{(i)}, f(x^{(i)})) \\right] \\leq (1-\\epsilon)^n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "2. We have $H$ models in $\\mathcal{M}$, and any of them could be in accurate. The probability that at least one the at most $H$ inaccurate models willl fit the training set perfectly is $\\leq H (1-\\epsilon)^n$.\n",
+    "<!-- 3. If $\\delta$ is the probability that a bad classifier is found by supervised learning, then $\\delta \\leq H (1-\\epsilon)^n$ and if\n",
+    "$$ n \\geq \\frac{\\log(\\delta/H)}{\\log(1-\\epsilon)} $$\n",
+    "then supervised learning will work with probability at least $1-\\delta$. -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "Therefore, the claim holds."
+   ]
   }
  ],
  "metadata": {
@@ -2262,9 +2217,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "gw-cs",
+   "display_name": "gwu",
    "language": "python",
-   "name": "gw-cs"
+   "name": "gwu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2276,7 +2231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.11"
   },
   "rise": {
    "controlsTutorial": false,
