--- a/slides/lecture7-gaussian-mixture-models.ipynb
+++ b/slides/lecture7-gaussian-mixture-models.ipynb
@@ -389,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x176a5d090>"
+       "<matplotlib.legend.Legend at 0x13345bd00>"
       ]
      },
      "execution_count": 2,
@@ -1450,7 +1450,7 @@
    "source": [
     "<left><img width=25% src=\"img/gw_monogram_2c.png\"></left>\n",
     "# Appendix: \n",
-    "* Special Cases of GDA\n",
+    "* Special Cases of GDA (LDA, QNB, QDA)\n",
     "* LDA vs. Logistic Regression\n"
    ]
   },
