Slides order fixed.

--- a/slides/lecture10-clustering.ipynb
+++ b/slides/lecture10-clustering.ipynb
@@ -951,19 +951,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Note that we can't flip the sum and the log!\n",
-    "* Because of that, our closed-form solutions don't apply\n",
-    "* In fact, the objective now has many local minima!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -1216,7 +1203,7 @@
     }
    },
    "source": [
-    "<left><img width=25% src=\"img/cornell_tech2.svg\"></left>\n",
+    "<left><img width=25% src=\"img/gw_monogram_2c.png\"></left>\n",
     "# Part 3: Expectation Maximization in Gaussian Mixture Models\n",
     "\n",
     "Next, let's work through how Expectation Maximization works in Gaussian Mixture Models."
@@ -1226,7 +1213,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -1416,7 +1403,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1646be220>"
+       "<matplotlib.collections.PathCollection at 0x167488100>"
       ]
      },
      "execution_count": 9,
@@ -1472,7 +1459,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1646e55e0>"
+       "<matplotlib.collections.PathCollection at 0x1675035b0>"
       ]
      },
      "execution_count": 10,
@@ -1517,7 +1504,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1668ea730>"
+       "<matplotlib.collections.PathCollection at 0x169fc8700>"
       ]
      },
      "execution_count": 11,
@@ -1714,7 +1701,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x166a925b0>"
+       "<matplotlib.collections.PathCollection at 0x16a164490>"
       ]
      },
      "execution_count": 15,
@@ -1783,7 +1770,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x166b4ceb0>"
+       "<matplotlib.legend.Legend at 0x16a0ee610>"
       ]
      },
      "execution_count": 16,
