In ROC slide, FPR bug fixed.

--- a/slides/lecture8-evaluation.ipynb
+++ b/slides/lecture8-evaluation.ipynb
@@ -939,7 +939,7 @@
     "\n",
     "\\begin{align*}\n",
     "\\text{TPR} = \\underset{\\text{(recall, sensitivity)}}{\\text{true positive rate}} & = \\frac{\\text{TP}}{\\text{positive class}}  = \\frac{\\text{TP}}{\\text{TP} + \\text{FN}} \\\\\n",
-    "\\text{FPR} = 1-\\underset{\\text{(true negative rate)}}{\\text{specificity}} & = 1 - \\frac{\\text{TN}}{\\text{negative class}} = \\frac{\\text{FP}}{\\text{TP} + \\text{FP}} \\\\\n",
+    "\\text{FPR} = 1-\\underset{\\text{(true negative rate)}}{\\text{specificity}} & = 1 - \\frac{\\text{TN}}{\\text{negative class}} = \\frac{\\text{FP}}{\\text{TN} + \\text{FP}} \\\\\n",
     "\\end{align*}"
    ]
   },
@@ -1116,7 +1116,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
+     "slide_type": "slide"
     }
    },
    "source": [
