--- a/slides/lecture13-deep-learning.ipynb
+++ b/slides/lecture13-deep-learning.ipynb
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1219,7 +1219,7 @@
    "source": [
     "# When to Use Convolutions?\n",
     "\n",
-    "Convolutions work best on inputs containing \"attributes\" that are interesting, but whose location in the input is important."
+    "Convolutions work best on inputs containing \"attributes\" that are interesting, but whose location in the input is not important."
    ]
   },
   {
