Visualization link added.

--- a/slides/lecture14-decision-trees.ipynb
+++ b/slides/lecture14-decision-trees.ipynb
@@ -28,6 +28,19 @@
     }
    },
    "source": [
+    "### Nice visualizations\n",
+    "\n",
+    "http://www.r2d3.us/visual-intro-to-machine-learning-part-1/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Part 1: Decision Trees\n",
     "\n",
     "We are now going to see a different way of defining machine models called *decision trees*."
